--- a/Portfolio Website/public/css/style.css
+++ b/Portfolio Website/public/css/style.css
@@ -463,12 +463,22 @@ and (orientation: landscape) and (max-device-width: 2500px) and (-webkit-min-dev
     --zoom-level: 0.6;
   }
 
+  p {
+    font-size: 14px;
+    color: #ffffff;
+  }
+
 }
 
 @media (max-width: 900px) {
   .cursor-glow {
     box-shadow: none;
     border: none;
+  }
+
+  p {
+    font-size: 14px;
+    color: #ffffff;
   }
 
   #social {
